--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,98 @@
   align-items: center;
 }
 
-.shoppingBasket {
+.titleItem {
   cursor: pointer;
   color: white;
+}
+
+/*Buttons*/
+.customBtn {
+  height: 30px;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  padding-left: 7px;
+  padding-right: 7px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.redBtn {
+  background-color: #d11b1b;
+  color: white;
+}
+
+.greenBtn {
+  background-color: #19d461;
+  color: white;
+  display: flex;
+  justify-content: center;
+}
+
+/*Filter*/
+.filterValueSpace {
+  height: 50px;
+}
+
+.filterValue {
+  margin: 20px;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.filterItem {
+  font-weight: 600;
+  margin-right: 20px;
+}
+
+/*Item Grid*/
+.item {
+  margin-bottom: 20px;
+  box-shadow: 0 2px 10px 0 rgb(0 0 0 / 15%);
+}
+
+.clothingImage {
+  width: 400px;
+}
+
+.itemGrid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin-top: 20px;
+}
+
+.itemTitleRow {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+.itemTitle {
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.itemCats {
+  display: flex;
+}
+
+.category {
+  margin-left: 5px;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.price {
+  display: flex;
+  font-size: 16px;
+  padding: 10px;
+}
+
+.quantity {
+  margin-left: 5px;
 }
